--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bootstrap": "^5.2.2",
+    "firebase-tools": "^11.16.0",
     "rxjs": "~7.5.0",
     "spotify-web-playback": "^1.4.0",
     "tslib": "^2.3.0",
